--- a/toxicity_site/templates/make_requests.html
+++ b/toxicity_site/templates/make_requests.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>User Profile</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<h1>{{title}}</h1>
+
+<form action="" method="post">
+    {% csrf_token %}
+
+
+        <p><label class="form-label" for="{{ user_request }}">
+            <textarea class="form-input" name="comment"></textarea>
+        </label></p>
+
+    <button type="submit">Get Result</button>
+</form>
+
+{% endblock %}
