added save button

--- a/toxicity_site/templates/requests_history.html
+++ b/toxicity_site/templates/requests_history.html
@@ -21,4 +21,7 @@
             {% endfor %}
         </table>
 
+<br>
+<button><a href="{% url 'save_to_json' %}">Save to json</a></button>
+
 {% endblock %}
