--- a/toxicity_site/templates/base.html
+++ b/toxicity_site/templates/base.html
@@ -20,7 +20,7 @@
 				{% if request.user.is_authenticated %}
 				<li class="last"> {{user.username}} | <a href="{% url 'logout' %}">Log Out</a></li>
 				{% else %}
-				<li class="last"><a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}">Log in</a></li>
+				<li class="last"><a href="{% url 'register' %}">Sign Up</a> | <a href="{% url 'login' %}">Log in</a></li>
 				{% endif %}
 			</ul>
 			<div class="clear"></div>
