--- a/toxicity_site/templates/make_requests.html
+++ b/toxicity_site/templates/make_requests.html
@@ -8,7 +8,7 @@
 
 
         <p><label class="form-label" for="{{ user_request }}">
-            <textarea class="form-input" name="comment"></textarea>
+            <textarea class="form-input" rows="10" cols="200" name="comment"></textarea>
         </label></p>
 
     <button type="submit">Get Result</button>
